2006-12-29  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Remove references to restyle/reindent.
	* ChangeLog,
	* README: Here.

2006-12-29  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Remove restyle.
	Now available under common/restyle.
	* restyle: Remove.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Fix XFAIL_TESTS handling
	* build-aux/check.mk: We need to take the basename of $<.
	But that is still not right: this breaks if there are / in
	the test name.
	But that's good enough an approximation for now.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Upgrade check.mk
	* check.mk (am__rst_section, am__rst_subsection)
	(am__text_box, am__check_pre, am__check_post): New.
	Use the latter two to factor the log production rules.
	Use the former ones to improve the Rst output of the log.

2006-12-28  POTHIER Benoit  <benoit.pothier@gmx.net>

	Fix header inclusion in test for qscintilla presence. 
	* qscintilla2.m4: Prepend Qsci subdir in include.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	Produce a Rst ready log
	* check.mk: here.

2006-12-23  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix compilation of big C++ parsers generated by Bison on MIPS GCC.
	* urbi-prog-cxx.m4 (PARSER_CXXFLAGS): Add -Wa,-relax-branch, an
	  assembler option used to work around GCC's "bug".

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Add missing trunk
	* svn-externals: For alias urbivalid.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	svn-externals: urbivalid
	* svn-externals (url_aliases): Catch unknown aliases.
	Add an alias for urbivalid.

2006-12-19  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix typo.
	* test.sh.in: Add missing dollars.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	More warnings
	* urbi-prog-cxx.m4: here.

2006-12-15  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Remove more spurious warnings from VC++.
	* urbi-prog-cxx.m4: Here. Also sort the warnings in numerical order.